--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "lint": "eslint . --fix"
-  },
-  "dependencies": {
-    "@nuxt/content": "^2.13.2",
-    "@nuxt/eslint": "^0.6.0",
-    "@nuxtjs/seo": "^2.0.0-rc.23",
-    "@nuxtjs/tailwindcss": "^6.12.2",
-    "nuxt": "^3.13.2"
-  },
-  "devDependencies": {
-    "typescript": "^5.6.3"
-  }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"lint": "eslint . --fix && prettier --write --list-different ."
+	},
+	"dependencies": {
+		"@nuxt/content": "^2.13.2",
+		"@nuxt/eslint": "^0.6.0",
+		"@nuxt/fonts": "^0.10.0",
+		"@nuxtjs/seo": "^2.0.0-rc.23",
+		"@nuxtjs/tailwindcss": "^6.12.2",
+		"@nuxtjs/web-vitals": "^0.2.7",
+		"nuxt": "^3.13.2"
+	},
+	"devDependencies": {
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"typescript": "^5.6.3"
+	}
 }
