--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@nuxt/content": "^2.13.2",
 		"@nuxt/eslint": "^0.6.0",
 		"@nuxt/fonts": "^0.10.0",
+		"@nuxt/icon": "^1.5.6",
+		"@nuxtjs/i18n": "^8.5.5",
 		"@nuxtjs/seo": "^2.0.0-rc.23",
 		"@nuxtjs/tailwindcss": "^6.12.2",
 		"@nuxtjs/web-vitals": "^0.2.7",
